# enterprise-user-lifecycle-automation

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: architecture-diagram.md  demo-output.md  linkedin-featured-description.md  project-summary.md
config/: department-group-map.example.json  license-map.example.json  settings.example.json  tool-access-map.example.json
data/: mock-graph-responses.json  sample-offboarding.csv  sample-users.csv
docs/: architecture.md  offboarding-flow.md  onboarding-flow.md  recruiter-review-guide.md  roadmap-issues.md  screenshots.md  security-considerations.md  technical-review-guide.md
reports/: offboarding-report-sample.json  offboarding-report-sample.md  onboarding-report-sample.json  onboarding-report-sample.md
scripts/powershell/: Disable-UserAccess.ps1  Invoke-Offboarding.ps1  Invoke-Onboarding.ps1  README.md  Set-UserGroups.ps1  Set-UserLicenses.ps1
scripts/python/: README.md  generate_report.py  graph_client_mock.py  lifecycle_cli.py  validate_user_data.py
src/lifecycle/: __init__.py  config_loader.py  graph_client_mock.py  offboarding.py  onboarding.py  report_builder.py  tool_payloads.py  validators.py
tests/: test_cli.py  test_config_loader.py  test_report_builder.py  test_tool_payloads.py  test_validators.py
