[project]
name = "enterprise-user-lifecycle-automation"
version = "0.1.0"
description = "Portfolio-grade enterprise automation toolkit for mock employee onboarding and offboarding."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Portfolio Demo" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Systems Administration",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
